tests/snapshots/execution_spec__call-mutation.md_assert_3.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "insertPostToFirstUser": {
        "body": "post-body"
      }
    }
  }
}
