tests/snapshots/execution_spec__call-mutation.md_assert_4.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "insertMockedPost": {
        "body": "post-body"
      }
    }
  }
}
