tests/snapshots/execution_spec__call-operator-mutation.md_assert_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "post": {
          "title": "user-title"
        }
      }
    }
  }
}
