tests/snapshots/execution_spec__call-operator.md_assert_10.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "news": {
            "news": [
              {
                "id": 1
              },
              {
                "id": 2
              }
            ]
          }
        }
      ]
    }
  }
}
