tests/snapshots/execution_spec__call-operator.md_assert_5.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "userHttpHeaders": {
            "name": "Leanne Graham http headers"
          }
        }
      ]
    }
  }
}
