tests/snapshots/execution_spec__call-operator.md_assert_7.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userPosts": [
        {
          "title": "bar"
        },
        {
          "title": "qux"
        }
      ]
    }
  }
}
