tests/snapshots/execution_spec__call-operator.md_assert_8.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userWithPosts": {
        "posts": [
          {
            "title": "bar"
          },
          {
            "title": "qux"
          }
        ]
      }
    }
  }
}
